--- a/src/gameboard.scss
+++ b/src/gameboard.scss
@@ -1,18 +1,18 @@
 .gameboard {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
   background: $blue;
 }
 
-  .gameboard__loader {
-    width: 100%;
-    height: 600px;
-    text-align: center;
-    @include vertical-align;
-    text-transform: uppercase;
-    color: #ffffff;
-    text-shadow: 2px 2px 3px #000000;
-    font-size: 24px;
-    text-align: center;
-  }
+.gameboard__loader {
+  width: 100%;
+  height: 600px;
+  text-align: center;
+  @include vertical-align;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-shadow: 2px 2px 3px #000000;
+  font-size: 24px;
+  text-align: center;
+}
